test/integration/good/good_fundef_returntypes1.stan
functions {
  real foo() {
    if (215)
      return 24;
    return 24;
  }
}