test/integration/bad/new/ill-formed-statement26.stan
transformed data { if ( T) ; foo
